--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   provider: ^6.0.2
   shared_preferences: ^2.0.13
+  tuple: ^2.0.0
 
 dev_dependencies:
   flutter_test:
