--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,9 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/
-    - assets/icons/
+    - assets/ui/
+    - assets/element_icons/
+    - assets/patterns/
 
   fonts:
     - family: RobotoCondensed
