--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.2
+  flutter_native_splash: ^2.0.3+1
   provider: ^6.0.2
   shared_preferences: ^2.0.13
   transparent_image: ^2.0.0
@@ -40,3 +42,12 @@ flutter:
           weight: 400
         - asset: assets/fonts/RobotoCondensed-Bold.ttf
           weight: 700    
+
+flutter_icons:
+  android: "launcher_icon"
+  image_path: "assets/icons/launcher_icon.png"
+
+flutter_native_splash:
+  color: "#121212"
+  image: assets/icons/aether_icon.png
+
