--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   shared_preferences: ^2.0.13
   transparent_image: ^2.0.0
   tuple: ^2.0.0
+  url_launcher: ^6.0.20
 
 dev_dependencies:
   flutter_test:
