--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.9.2
   flutter_native_splash: ^2.0.3+1
+  just_audio: ^0.9.20
+  just_audio_libwinmedia: ^0.0.4
   provider: ^6.0.2
   shared_preferences: ^2.0.13
   transparent_image: ^2.0.0
@@ -35,6 +37,7 @@ flutter:
     - assets/patterns/
     - assets/ui/inventory_element/
     - assets/ui/compendium_tab/
+    - assets/sound_effects/
 
   fonts:
     - family: RobotoCondensed
