--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_launcher_icons: ^0.9.2
   flutter_native_splash: ^2.0.3+1
   just_audio: ^0.9.20
+  just_audio_libwinmedia: ^0.0.4
   provider: ^6.0.2
   shared_preferences: ^2.0.13
   transparent_image: ^2.0.0
