--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ flutter:
 
 flutter_icons:
   android: "launcher_icon"
+  web: false
+  windows: true
   image_path: "assets/icons/launcher_icon.png"
 
 flutter_native_splash:
